rnsc/test_data/integration/error/parser/type_hints/methodref/no_operands.rns
.class   @methodref ; no operand provided
.super java/lang/Object